Hello Java Bar Ben Shabat/HelloJavaWorld Bar.B.S/builds/3/log
Started by an SCM change
Running as SYSTEM
Building in workspace /Users/barbenshabat/.jenkins/workspace/HelloJavaWorld Bar.B.S
The recommended git tool is: NONE
No credentials specified
 > git rev-parse --resolve-git-dir /Users/barbenshabat/.jenkins/workspace/HelloJavaWorld Bar.B.S/.git # timeout=10
Fetching changes from the remote Git repository
 > git config remote.origin.url https://github.com/BarDAP/JenGit-Bar-BS.git # timeout=10
Fetching upstream changes from https://github.com/BarDAP/JenGit-Bar-BS.git
 > git --version # timeout=10
 > git --version # 'git version 2.30.1 (Apple Git-130)'
 > git fetch --tags --force --progress -- https://github.com/BarDAP/JenGit-Bar-BS.git +refs/heads/*:refs/remotes/origin/* # timeout=10
 > git rev-parse refs/remotes/origin/main^{commit} # timeout=10
Checking out Revision 2a236e07379fbbbad0cad2895e9ecd6a0face29f (refs/remotes/origin/main)
 > git config core.sparsecheckout # timeout=10
 > git checkout -f 2a236e07379fbbbad0cad2895e9ecd6a0face29f # timeout=10
Commit message: "Hello.java was added"
First time build. Skipping changelog.
[HelloJavaWorld Bar.B.S] $ /bin/sh -xe /var/folders/fm/w1vqdvtd2lsfdrk3rwj59dz40000gn/T/jenkins6852016311980619760.sh
+ cd /Users/barbenshabat/Downloads/Devops/JenGit
+ javac Hello_Bar_B_S.java
Hello_Bar_B_S.java:1: error: class, interface, or enum expected
ublic class Hello_Bar_B_S{
^
1 error
Build step 'Execute shell' marked build as failure
Finished: FAILURE
